--- a/index.html
+++ b/index.html
@@ -109,35 +109,48 @@
                 <section>
 
                     <div class="demo-spaced">
-                        <h2>Demos</h2>
+                        <h2>Blog templates</h2>
                     </div>
-
                     <div class="demo-cols">
                         <div class="demo-col-6 demo-spaced">
                             <div class="meta-header">
                                 <span class="meta-header_left category-slug">
-                                    Static demos
+                                    Sheer
                                 </span>
                             </div>
-                            <h3><a href="blog_static/landing.html">Blog landing page</a></h3>
-                            <h3><a href="blog_static/post.html">Blog post</a></h3>
+                            <h3><a href="blog/">Landing page</a></h3>
+                            <h3><a href="blog/spring-2014-rulemaking-agenda">Post</a></h3>
                         </div>
                         <div class="demo-col-6 demo-spaced">
                             <div class="meta-header">
                                 <span class="meta-header_left category-slug">
-                                    Sheer demos
+                                    Static
                                 </span>
                             </div>
-                            <h3><a href="blog/">Blog landing page</a></h3>
-                            <h3><a href="blog/spring-2014-rulemaking-agenda">Blog post</a></h3>
+                            <h3><a href="blog_static/landing.html">Landing page</a></h3>
+                            <h3><a href="blog_static/post.html">Post</a></h3>
+                        </div>
+                    </div>
+
+                    <div class="demo-spaced">
+                        <h2>Newsroom templates</h2>
+                    </div>
+                    <div class="demo-cols">
+                        <div class="demo-col-6 demo-spaced">
+                            <div class="meta-header">
+                                <span class="meta-header_left category-slug">
+                                    Sheer
+                                </span>
+                            </div>
+                            <h3><a href="newsroom/">Landing page</a></h3>
                         </div>
                         <div class="demo-col-6 demo-spaced">
                             <div class="meta-header">
                                 <span class="meta-header_left category-slug">
-                                    Static demos
+                                    Static
                                 </span>
                             </div>
-                            <h3><a href="newsroom_static/landing.html">Newsroom landing page</a></h3>
+                            <h3><a href="newsroom_static/landing.html">Landing page</a></h3>
                         </div>
                     </div>
 
