Use macro for _single template category icons.

--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -27,6 +27,8 @@
        included partials with blog #}
     {% set post = newsroom %}
 
+    {% import "post-macros.html" as post_macros with context %}
+
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
         
         <!-- .content_bar must come after .content_hero but before .content_wrapper -->
