Very basic watchroom styles.

--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -58,7 +58,7 @@
 
             <section class="content_main">
                 {% include "post-filters.html" %}
-                <div class="demo-placeholder">watchroom placeholder</div>
+                {% include "watchroom.html" %}
                 {% include "posts-paginated.html" %}
                 <aside class="content_footer">
                     {% include "stay-informed.html" %}
