First pass at fancy slug.

--- a/newsroom/watchroom.html
+++ b/newsroom/watchroom.html
@@ -1,5 +1,14 @@
 
 <article class="watchroom summary">
+    <h2 class="fancy-slug">
+        <span class="fancy-slug_inner">
+            <span class="fancy-slug_ribbon fancy-slug_ribbon__left">&nbsp;</span>
+            <span class="fancy-slug_text">
+                Watchroom
+            </span>
+            <span class="fancy-slug_ribbon fancy-slug_ribbon__right">&nbsp;</span>
+        </span>
+    </h2>
     <h1 class="summary_header summary_header__large">Preventing illegal discrimination in auto</h1>
     <div class="summary_cols">
         <div class="summary_col">
