--- a/newsroom/watchroom.html
+++ b/newsroom/watchroom.html
@@ -1,11 +1,11 @@
 
 <article class="watchroom summary">
     <h2 class="fancy-slug">
-        <span class="fancy-slug_ribbon-left">&nbsp;</span>
         <span class="fancy-slug_text">
+            <span class="fancy-slug_ribbon-left"></span>
             Watchroom
+            <span class="fancy-slug_ribbon-right"></span>
         </span>
-        <span class="fancy-slug_ribbon-right">&nbsp;</span>
     </h2>
     <h1 class="summary_header summary_header__large">Preventing illegal discrimination in auto</h1>
     <div class="summary_cols">
