Change expandable link to a button.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -166,8 +166,7 @@
                 <div class="expandable expandable__expanded">
                     <div class="expandable_header expandable_header__spaced">
                         <div class="expandable_header-right expandable_header-right__float-on-medium">
-                            <a class="expandable_target btn btn-secondary"
-                               href="#post-filters-form">
+                            <button class="expandable_target btn btn-secondary">
                                 Filter posts
                                 <span class="expandable_cue-open">
                                     <span class="btn-icon-right cf-icon cf-icon-down"></span>
@@ -175,7 +174,7 @@
                                 <span class="expandable_cue-close">
                                     <span class="btn-icon-right cf-icon cf-icon-up"></span>
                                 </span>
-                            </a>
+                            </button>
                         </div>
                         <dl class="filtered-by filtered-by__show-on-medium filtered-by__align-with-btn list list__horizontal">
                             <dt class="list_item">
