--- a/newsroom/watchroom.html
+++ b/newsroom/watchroom.html
@@ -1,53 +1,53 @@
+{% for post in watchroom %}
 
-<article class="watchroom summary">
-    <h2 class="fancy-slug">
-        <span class="fancy-slug_text">
-            <span class="fancy-slug_ribbon-left"></span>
-            Watchroom
-            <span class="fancy-slug_ribbon-right"></span>
-        </span>
-    </h2>
-    <h1 class="summary_header summary_header__large">Preventing illegal discrimination in auto</h1>
-    <div class="summary_cols">
-        <div class="summary_col">
-            <p class="summary_text summary_text__dark">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde hic
-                praesentium eum eveniet accusamus ad provident neque. Earum numquam
-                tenetur voluptates adipisci expedita reiciendis libero fuga non quas
-                voluptatem nihil.
-            </p>
+    <article class="watchroom summary">
+        <h2 class="fancy-slug">
+            <span class="fancy-slug_text">
+                <span class="fancy-slug_ribbon-left"></span>
+                Watchroom
+                <span class="fancy-slug_ribbon-right"></span>
+            </span>
+        </h2>
+        <h1 class="summary_header summary_header__large">
+            {{ post.title }}
+        </h1>
+        <div class="summary_cols">
+            <div class="summary_col summary_text summary_text__dark">
+                {{ post.content|safe }}
+            </div>
+            <div class="summary_col">
+                <ul class="list list__spaced list__unstyled">
+                    <li class="list_item">
+                        <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span>
+                        <a class="list_link"
+                           href="#">
+                           Student Debt Domino Effect?
+                       </a>
+                    </li>
+                    <li class="list_item">
+                        <span class="category-slug_icon cf-icon cf-icon-contract"></span>
+                        <a class="list_link"
+                           href="#">
+                           CFPB Takes Action Against RealtySouth for Mortgage Disclosure Violations
+                       </a>
+                    </li>
+                    <li class="list_item">
+                        <span class="category-slug_icon cf-icon cf-icon-double-quote"></span>
+                        <a class="list_link"
+                           href="#">
+                           Student Debt Domino Effect?
+                       </a>
+                    </li>
+                    <li class="list_item">
+                        <span class="category-slug_icon cf-icon cf-icon-microphone"></span>
+                        <a class="list_link"
+                           href="#">
+                           Student Debt Domino Effect?
+                       </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="summary_col">
-            <ul class="list list__spaced list__unstyled">
-                <li class="list_item">
-                    <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span>
-                    <a class="list_link"
-                       href="#">
-                       Student Debt Domino Effect?
-                   </a>
-                </li>
-                <li class="list_item">
-                    <span class="category-slug_icon cf-icon cf-icon-contract"></span>
-                    <a class="list_link"
-                       href="#">
-                       CFPB Takes Action Against RealtySouth for Mortgage Disclosure Violations
-                   </a>
-                </li>
-                <li class="list_item">
-                    <span class="category-slug_icon cf-icon cf-icon-double-quote"></span>
-                    <a class="list_link"
-                       href="#">
-                       Student Debt Domino Effect?
-                   </a>
-                </li>
-                <li class="list_item">
-                    <span class="category-slug_icon cf-icon cf-icon-microphone"></span>
-                    <a class="list_link"
-                       href="#">
-                       Student Debt Domino Effect?
-                   </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</article>
+    </article>
+
+{% endfor %}
