--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -79,7 +79,11 @@
                         <p class="sans">
                             Subscribe to our RSS feed to get the latest content in your reader.
                         </p>
-                        {{ post_macros.rss_button('newsroom') }}
+                        <a class="btn"
+                           href="/feed/newsroom">
+                            <!-- <span class="btn-icon-left cf-icon cf-icon-rss"></span> -->
+                            Subscribe to RSS
+                        </a>
                     </div>
                 </aside>
                 <aside class="content_footer content_footer__bg">
