Removes deleted class.

--- a/newsroom/watchroom.html
+++ b/newsroom/watchroom.html
@@ -12,7 +12,7 @@
             {{ post.title }}
         </h1>
         <div class="summary_cols">
-            <div class="summary_col summary_col__skinny summary_text summary_text__dark">
+            <div class="summary_col summary_text summary_text__dark">
                 {{ post.content|safe }}
             </div>
             <div class="summary_col">
