--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -57,7 +57,7 @@
 
             <aside class="content_sidebar">
                 {% include "nav.html" %}
-            </aside><!-- END .content_sidebar -->
+            </aside>
 
             <section class="content_main">
                 {% include "post-filters.html" %}
