--- a/newsroom/press-resources.html
+++ b/newsroom/press-resources.html
@@ -25,7 +25,7 @@
 
             <aside class="content_sidebar">
                 {% include "nav.html" %}
-            </aside><!-- END .content_sidebar -->
+            </aside>
             
             <section class="content_main">
 
