Adds press information to newsroom article pages.

--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -37,6 +37,7 @@
         <div class="wrapper content_wrapper">
             <section class="content_main content_main__narrow">
                 {% include "article.html" %}
+                {% include "press-information.html" %}
             </section>
 
             <aside class="content_sidebar">
