--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                                 </span>
                             </div>
                             <h3><a href="newsroom/">Landing page</a></h3>
+                            <h3><a href="newsroom/press-resources.html">Press Resources</a></h3>
                         </div>
                         <div class="demo-col-6 demo-spaced">
                             <div class="meta-header">
