--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -80,8 +80,7 @@
                             <p class="sans">
                                 Subscribe to our RSS feed to get the latest content in your reader.
                             </p>
-                            <a class="btn"
-                               href="/feed/newsroom">
+                            <a class="btn" href="/feed/newsroom">
                                 <!-- <span class="btn-icon-left cf-icon cf-icon-rss"></span> -->
                                 Subscribe to RSS
                             </a>
