Changes .sans to .short-desc.

--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -71,13 +71,13 @@
                     </h1>
                     <div class="content-l">
                         <div class="content-l_col content-l_col-1-2">
-                            <p class="sans">
+                            <p class="short-desc">
                                 Subscribe to our email newsletter. We will update you on new newsroom updates.
                             </p>
                             {% include "email-subscribe-form.html" %}
                         </div>
                         <div class="content-l_col content-l_col-1-2">
-                            <p class="sans">
+                            <p class="short-desc">
                                 Subscribe to our RSS feed to get the latest content in your reader.
                             </p>
                             <a class="btn" href="/feed/newsroom">
