--- a/newsroom/press-information.html
+++ b/newsroom/press-information.html
@@ -5,7 +5,7 @@
             Press information
         </span>
     </h1>
-    <p class="sans">
+    <p class="short-desc">
         If you want to republish the article or have questions about the content,
         please contact the press office.
     </p>
