--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -53,11 +53,11 @@
                             Stay informed
                         </span>
                     </h1>
-                    <p class="sans">
+                    <p class="short-desc">
                         Subscribe to our email newsletter. We will update you on new newsroom updates.
                     </p>
                     {% include "email-subscribe-form.html" %}
-                    <p class="sans">
+                    <p class="short-desc">
                         Subscribe to our RSS feed to get the latest content in your reader.
                     </p>
                     <a class="btn" href="/feed/newsroom">
