Fixes content__flush-bottom classes in markup.

--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -59,7 +59,7 @@
                 {% include "nav.html" %}
             </aside>
 
-            <section class="content_main content_main__flush-bottom">
+            <section class="content_main content__flush-bottom">
                 {% include "post-filters.html" %}
                 {% include "watchroom.html" %}
                 {% include "posts-paginated.html" %}
