--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -35,7 +35,7 @@
         <div class="content_bar"></div>
 
         <div class="wrapper content_wrapper">
-            <section class="content_main content_main__narrow">
+            <section class="content_main content_main__narrow content__flush-bottom">
                 {% include "article.html" %}
                 {% include "press-information.html" %}
             </section>
