Fixes content__flush-bottom classes in markup.

--- a/newsroom/press-resources.html
+++ b/newsroom/press-resources.html
@@ -25,7 +25,7 @@
                 {% include "nav.html" %}
             </aside>
             
-            <section class="content_main">
+            <section class="content_main content__flush-bottom">
         
                 <h1 class="u-visually-hidden">Press Resources</h1>
 
