Press Resources styling fixes
- Fixes #111
- Fixes #112
- Refactored to use .content-l in places, but many still need overrides.
- General responsiveness improvements
- Adds images
- Tweaks .content-l third columns to be proper single cols between 600
  and 768.

--- a/newsroom/press-resources.html
+++ b/newsroom/press-resources.html
@@ -31,13 +31,13 @@
 
                 <section class="press-section press-contacts">
 
-                    <h1 class="press-section_title">Press contacts</h1>
+                    <h1 class="press-section_title press-contacts_title">Press contacts</h1>
 
                     <div class="press-section_intro press-contacts_intro">
 
-                        <p>We are committed to engaging with the public
-                            and members of the media regularly with accurate and up-to-date information on
-                            our work. Content materials are produced by our Office of Communications.</p>
+                        <p>We are committed to engaging with the public and members of the media
+                            regularly with accurate and up-to-date information on our work.
+                            Content materials are produced by our Office of Communications.</p>
 
                         <ul class="list list__links list__icons">
                             <li class="list_item list__links_item">
@@ -56,12 +56,12 @@
 
                     </div>
 
-                    <div class="press-contacts_people">
+                    <div class="press-contacts_people content-l">
 
-                        <section class="contact-person">
+                        <section class="contact-person content-l_col-1-2">
                             <h1 class="contact-person_name">Jen Howard</h1>
                             <div class="contact-person_title">Assistant Director of Communications</div>
-                            <ul class="list list__unstyled">
+                            <ul class="contact-person_methods list list__unstyled">
                                 <li class="list_item">
                                     <a href="mailto:jennifer.howard@cfpb.gov">
                                         jennifer.howard@cfpb.gov
@@ -73,10 +73,10 @@
                             </ul>
                         </section>
 
-                        <section class="contact-person">
+                        <section class="contact-person content-l_col-1-2">
                             <h1 class="contact-person_name">Mallory McLean</h1>
                             <div class="contact-person_title">Regional Spokesperson</div>
-                            <ul class="list list__unstyled">
+                            <ul class="contact-person_methods list list__unstyled">
                                 <li class="list_item">
                                     <a href="mailto:mallory.mclean@cfpb.gov">
                                         mallory.mclean@cfpb.gov
@@ -88,10 +88,10 @@
                             </ul>
                         </section>
 
-                        <section class="contact-person">
+                        <section class="contact-person content-l_col-1-2">
                             <h1 class="contact-person_name">Michelle Person</h1>
                             <div class="contact-person_title">Spokesperson</div>
-                            <ul class="list list__unstyled">
+                            <ul class="contact-person_methods list list__unstyled">
                                 <li class="list_item">
                                     <a href="mailto:michelle.person@cfpb.gov">
                                         michelle.person@cfpb.gov
@@ -103,10 +103,10 @@
                             </ul>
                         </section>
 
-                        <section class="contact-person">
+                        <section class="contact-person content-l_col-1-2">
                             <h1 class="contact-person_name">Moira Vahey</h1>
                             <div class="contact-person_title">Spokesperson</div>
-                            <ul class="list list__unstyled">
+                            <ul class="contact-person_methods list list__unstyled">
                                 <li class="list_item">
                                     <a href="mailto:moira.vahey@cfpb.gov">
                                         moira.vahey@cfpb.gov
@@ -118,64 +118,78 @@
                             </ul>
                         </section>
 
-                    </div>
+                    </div> <!-- END .press-contacts_people.content-l_col-2-3 -->
 
                 </section> <!-- END .press-section.press-contacts -->
 
                 <section class="press-section press-photos-bios">
 
-                    <h1 class="press-section_title">Photos and bios</h1>
+                    <h1 class="press-section_title press-photos-bios_title">Photos and bios</h1>
 
                     <p class="press-section_intro">Our director is appointed by the president and
                         confirmed by the Senate. He heads a bureau of more than 1,200 people working for
                         American consumers. The CFPB works through six divisions, each headed by an
                         associate director.</p>
 
-                    <section class="contact-person contact-person__director">
-                        <img class="contact-person_photo" src="" alt="" width="200" height="200">
-                        <div class="contact-person_title">Director</div>
-                        <h1 class="contact-person_name">Richard Cordray</h1>
-                        <ul class="list list__links">
-                            <li class="list_item list__links_item">
-                                <a class="list_link" href="#">
-                                    Biography <span class="cf-icon cf-icon-right"></span>
-                                </a>
-                            </li>
-                            <li class="list_item list__links_item">
-                                <a class="list_link" href="#">
-                                    High-res portrait <span class="cf-icon cf-icon-download"></span>
-                                </a>
-                            </li>
-                            <li class="list_item list__links_item">
-                                <a class="list_link" href="#">
-                                    Low-res portrait <span class="cf-icon cf-icon-download"></span>
-                                </a>
-                            </li>
-                        </ul>
-                    </section>
+                    <div class="content-l">
 
-                    <section class="contact-person contact-person__director">
-                        <img class="contact-person_photo" src="" alt="" width="200" height="200">
-                        <div class="contact-person_title">Deputy Director</div>
-                        <h1 class="contact-person_name">Steve Antonakes</h1>
-                        <ul class="list list__links">
-                            <li class="list_item list__links_item">
-                                <a class="list_link" href="#">
-                                    Biography <span class="cf-icon cf-icon-right"></span>
-                                </a>
-                            </li>
-                            <li class="list_item list__links_item">
-                                <a class="list_link" href="#">
-                                    High-res portrait <span class="cf-icon cf-icon-download"></span>
-                                </a>
-                            </li>
-                            <li class="list_item list__links_item">
-                                <a class="list_link" href="#">
-                                    Low-res portrait <span class="cf-icon cf-icon-download"></span>
-                                </a>
-                            </li>
-                        </ul>
-                    </section>
+                        <section class="contact-person contact-person__director content-l_col-1-2">
+                            <img class="contact-person_photo"
+                                 src="cordray_round_360.jpg"
+                                 alt=""
+                                 width="180">
+                            <div class="contact-person_title">Director</div>
+                            <h1 class="contact-person_name">Richard Cordray</h1>
+                            <ul class="list list__links">
+                                <li class="list_item list__links_item">
+                                    <a class="list_link" href="#">
+                                        Biography <span class="cf-icon cf-icon-right"></span>
+                                    </a>
+                                </li>
+                                <li class="list_item list__links_item">
+                                    <a class="list_link"
+                                       href="201402_cfpb_photo_richard-cordray_high-res.jpg">
+                                        High-res portrait <span class="cf-icon cf-icon-download"></span>
+                                    </a>
+                                </li>
+                                <li class="list_item list__links_item">
+                                    <a class="list_link"
+                                       href="201402_cfpb_photo_richard-cordray_low-res.jpg">
+                                        Low-res portrait <span class="cf-icon cf-icon-download"></span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </section>
+
+                        <section class="contact-person contact-person__director content-l_col-1-2">
+                            <img class="contact-person_photo"
+                                 src="antonakes_round_360.jpg"
+                                 alt=""
+                                 width="180">
+                            <div class="contact-person_title">Deputy Director</div>
+                            <h1 class="contact-person_name">Steve Antonakes</h1>
+                            <ul class="list list__links">
+                                <li class="list_item list__links_item">
+                                    <a class="list_link" href="#">
+                                        Biography <span class="cf-icon cf-icon-right"></span>
+                                    </a>
+                                </li>
+                                <li class="list_item list__links_item">
+                                    <a class="list_link"
+                                       href="201405_cfpb_photo_steve-antonakes_high-res.jpg">
+                                        High-res portrait <span class="cf-icon cf-icon-download"></span>
+                                    </a>
+                                </li>
+                                <li class="list_item list__links_item">
+                                    <a class="list_link"
+                                       href="201405_cfpb_photo_steve-antonakes_low-res.jpg">
+                                        Low-res portrait <span class="cf-icon cf-icon-download"></span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </section>
+
+                    </div> <!-- END .content-l -->
 
                     <a class="jump-link" href="#">
                         Find out more about our leadership
@@ -186,17 +200,22 @@
 
                 <section class="press-section press-logo">
 
-                    <h1 class="press-section_title">Logo and usage</h1>
+                    <h1 class="press-section_title press-logo_title">Logo and usage</h1>
 
-                    <p class="press-section_intro press-logo_intro">The CFPB logo was designed to symbolize
-                        vigilance, transparency, and a consumer focus. Consumers are the foundation and
-                        focus of our mission and our logo reflects that. A soft beam of light symbolizes our
-                        efforts to illuminate the financial landscape and foster transparency in the
-                        marketplace.</p>
+                    <div class="content-l">
 
-                    <div class="press-logo_logo">
-                        <img src="" alt="CFPB logo" width="200" height="100">
-                    </div>
+                        <p class="press-section_intro press-logo_intro content-l_col-2-3">
+                            The CFPB logo was designed to symbolize vigilance, transparency, and
+                            a consumer focus. Consumers are the foundation and focus of our mission and
+                            our logo reflects that. A soft beam of light symbolizes our efforts to
+                            illuminate the financial landscape and foster transparency in the
+                            marketplace.</p>
+
+                        <div class="press-logo_logo">
+                            <img src="CFPB_2Tone_isolated_RGB_352.png" alt="CFPB logo" width="176">
+                        </div>
+
+                    </div> <!-- END .content-l -->
 
                     <a class="jump-link" href="https://cfpb.github.io/design-manual/identity/logo/">
                         Logo files and more in the CFPB Design Manual
@@ -205,7 +224,10 @@
 
                 </section> <!-- END .press-section.press-logo -->
 
-                <aside class="content_block content_block__flush-bottom content_block__flush-sides content_block__bg">
+                <aside class="content_block
+                              content_block__flush-bottom
+                              content_block__flush-sides
+                              content_block__bg">
                     <section class="content-l_col content-l_col-1-2">
                         <h1 class="header-slug">
                             <span class="header-slug_inner">
